tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@super_outside_block.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/super_outside_block.txt
---
error: super() called outside of a block
 --> super_outside_block.txt:1:4
  |
1 | {{ super() }}
  |    ^^^^^^^
